--- a/roles/3trains_keycloak/tasks/demo_urls_redirects/demo_app_urls.yml
+++ b/roles/3trains_keycloak/tasks/demo_urls_redirects/demo_app_urls.yml
@@ -9,7 +9,7 @@
     app_list_by_instance: []
 
 - set_fact:
-    url: "https://{{ item }}:"
+    url: "https://{{ item }}"
 
 - include_tasks: demo_app_all_urls_by_host.yml
 
