jbcs: cache clear on restart wfly: adjust port offset

--- a/roles/3trains_jbcs/tasks/main.yml
+++ b/roles/3trains_jbcs/tasks/main.yml
@@ -11,7 +11,7 @@
     src: templates/mod_cluster.conf.j2
     dest: /opt/jbcs-httpd24-2.4/httpd/conf.d/mod_cluster.conf
   notify:
-    - Restart JBCS
+    - expire mod_cluster cache and restart
 
 - name: configure firewall for JBCS ports
   become: yes
