--- a/roles/3trains_wildfly/tasks/jcliff-with-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff-with-keycloak.yml
@@ -40,7 +40,7 @@
                 auth_server_url: "{{ keycloak_url }}/auth/"
                 ssl_required: EXTERNAL
                 resource: "{{ keycloak_client }}"
-                credential: "{{ keycloak_client_secret_response.json.value }}"
+                credential: "{{ keycloak_client_secret_response.json.value | default(omit) }}"
                 verify_token_audience: true
                 use_resource_role_mappings: true
       - modcluster:
