jbcs: small typo fix

--- a/roles/3trains_jbcs/handlers/main.yml
+++ b/roles/3trains_jbcs/handlers/main.yml
@@ -4,7 +4,7 @@
     name: jbcs-httpd24-httpd.service
     state: restarted
 
-- name: "expire mod_cluster cache and restart"
+- name: 'expire mod_cluster cache and restart'
   become: true
   block:
     - service:
