--- a/roles/3trains_wildfly/tasks/appserver.yml
+++ b/roles/3trains_wildfly/tasks/appserver.yml
@@ -10,7 +10,7 @@
     wildfly_user: "{{ wildfly.user }}"
     wildfly_group: "{{ wildfly.group }}"
     wildfly_config_base: "{{ wildfly.config.base }}"
-    wildfly_basedir_prefix: "/var/run/{{ inventory_hostname }}"
+    wildfly_basedir_prefix: "/opt/{{ inventory_hostname }}"
     wildfly_config_name: "{{ inventory_hostname }}"
     wildfly_port_range_offset: -1
     wildfly_instance_name: "{{ inventory_hostname }}"
