keycloak: fix typo

--- a/roles/3trains_keycloak/tasks/restart_keycloak.yml
+++ b/roles/3trains_keycloak/tasks/restart_keycloak.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Restart and enable keyclock service"
+- name: "Restart and enable keycloack service"
   systemd:
     name: keycloak
     enabled: yes
