jdg: datagrid or infinispan

--- a/roles/3trains_jdg/tasks/main.yml
+++ b/roles/3trains_jdg/tasks/main.yml
@@ -12,59 +12,29 @@
 
 - include_tasks: prereqs.yml
 
-- group:
+- name: "Create group {{ jdg.group.name }}"
+  group:
     name: "{{ jdg.group.name }}"
     state: present
     gid: "{{ jdg.group.id | default(omit) }}"
 
-- user:
+- name: "Create user {{ jdg.user.name }}"
+  user:
     name: "{{ jdg.user.name }}"
     state: present
     uid: "{{ jdg.user.id | default(omit) }}"
 
-- set_fact:
-    zip_file_repo: /opt/apps
-
-- set_fact:
-    jdg_src: "{{ zip_file_repo }}/jdg-{{ jdg_version }}.zip"
-
-- file:
-    path: "{{ zip_file_repo }}"
+- name: "Create download directory"
+  file:
+    path: "{{ jdg_app_download_dir }}"
     state: directory
 
-- name: Download JBoss Core Services from CSP
-  redhat_csp_download:
-    url: "https://access.redhat.com/jbossnetwork/restricted/softwareDownload.html?softwareId=98151"
-    dest: "{{ jdg_src }}"
-    username: "{{ rhn_username }}"
-    password: "{{ rhn_password }}"
-  when:
-    - not jdg_installed is defined
-
-- stat:
-    path: "/opt/redhat-datagrid-8.2.0-server/"
-  register: jdg_home
-
-- debug:
-    msg: "{{ jdg_home }}"
-
-- name: Unarchive JDG
-  unarchive:
-    src: "{{ jdg_src }}"
-    remote_src: yes
-    dest: /opt
-    creates: "/opt/redhat-datagrid-8.2.0-server/server"
-  when:
-    - not jdg_home.stat.exists
-
-- file:
-    path: "{{ jdg.home }}"
-    owner: "{{ jdg.user.name }}"
-    group: "{{ jdg.group.name }}"
-    recurse: true
-  changed_when: false
+- include_tasks: tasks/install.yml
 
 - include_tasks: tasks/firewalld.yml
+
+- debug:
+    msg: "{{ 'Red Hat Datagrid' if jdg_rhn_id is defined else 'Infinispan' }} installed at path {{ jdg.home }}"
 
 - name: "Configure systemd unit file for JDG service"
   template:
@@ -77,6 +47,13 @@
   notify:
     - restart jdg
 
+- name: "Perform daemon-reload to ensure the changes on jdg service are picked up"
+  systemd:
+    daemon_reload: yes
+  when:
+    - jdg_daemon_reload is defined
+    - jdg_daemon_reload.changed
+
 - name: "Ensures JDG configuration is deployed: {{ jdg.config.name }}"
   template:
     src: "{{ jdg.config.template }}"
@@ -84,6 +61,7 @@
     owner: "{{ jdg.user.name }}"
     group: "{{ jdg.group.name }}"
     mode: 0644
+    backup: yes
   when:
     - jdg.config is defined
     - jdg.config.name is defined
@@ -96,13 +74,6 @@
   when:
     - jdg.users is defined
     - jdg.users | length > 0
-
-- name: "Perform daemon-reload to ensure the changes on jdg service are picked up"
-  systemd:
-    daemon_reload: yes
-  when:
-    - jdg_daemon_reload is defined
-    - jdg_daemon_reload.changed
 
 - name: Ensures JDG service is running and enabled
   systemd:
