--- a/roles/3trains_keycloak/tasks/systemd.yml
+++ b/roles/3trains_keycloak/tasks/systemd.yml
@@ -54,6 +54,8 @@
       - keycloak_service_status is defined
       - keycloak_service_status.stdout is defined
 
+- meta: flush_handlers
+
 - name: Wait until Keycloak becomes active
   uri:
     url: "{{ keycloak_management_url }}/health"
