--- a/roles/3trains_jdg/tasks/main.yml
+++ b/roles/3trains_jdg/tasks/main.yml
@@ -81,6 +81,8 @@
     state: started
     enabled: yes
 
+- meta: flush_handlers
+
 - name: "Wait for all used ports to be open"
   wait_for:
     port: "{{ jdg.port }}"
