--- a/roles/3trains_postgresql/templates/pg_hba.conf
+++ b/roles/3trains_postgresql/templates/pg_hba.conf
@@ -84,6 +84,9 @@ host    all             all             127.0.0.1/32            trust
 {% if groups['wildfly'] is defined and groups['wildfly'] | length > 0 %}{% for w in groups['wildfly'] %}
 host    all             all             {{ w }}                   trust
 {% endfor %}{% endif %}
+{% if groups['keycloak'] is defined and groups['keycloak'] | length > 0 %}
+host    keycloak             all             samenet                   trust
+{% endif %}
 # IPv6 local connections:
 host    all             all             ::1/128                 trust
 # Allow replication connections from localhost, by a user with the
