Fix review notes, update jcliff module, keycloak messages

--- a/roles/3trains_keycloak/tasks/main.yml
+++ b/roles/3trains_keycloak/tasks/main.yml
@@ -86,7 +86,7 @@
 
 - name: Manage User Roles
   include_tasks: manage_user_roles.yml
-  loop: "{{ keycloak_users }}"
+  loop: "{{ keycloak_users | flatten }}"
   loop_control:
     loop_var: user
-  when: "'client_roles' in user"
+  when: "{{ 'client_roles' in user }}"
