--- a/roles/3trains_keycloak/tasks/manage_user_roles.yml
+++ b/roles/3trains_keycloak/tasks/manage_user_roles.yml
@@ -1,15 +1,15 @@
 ---
 
-- name: "Get User"
+- name: "Get User {{ user.username }}"
   uri:
     url: "{{ keycloak_url }}/auth/admin/realms/{{ keycloak_realm }}/users?username={{ user.username }}"
-    validate_certs: no
     headers:
+      validate_certs: no
       Authorization: "Bearer {{ keycloak_auth_response.json.access_token }}"
   register: keycloak_user
 
-- name: Manage Client Role Mapping
+- name: "Manage Client Role Mapping for {{ user.username }}"
   include_tasks: manage_user_client_roles.yml
-  loop: "{{ user.client_roles }}"
+  loop: "{{ user.client_roles | flatten }}"
   loop_control:
     loop_var: client_role
