--- a/roles/3trains_wildfly/defaults/main.yml
+++ b/roles/3trains_wildfly/defaults/main.yml
@@ -61,5 +61,7 @@ keycloak_auth_client: admin-cli
 keycloak_admin_user: admin
 keycloak_admin_password: "redhat1!"
 keycloak_realm: 3trains
-keycloak_url: "{{ keycloak_3trains_url | default('http://localhost:8080') }}"
+keycloak_url: "{{ keycloak_3trains_url | default('http://keycloak-0:8080') }}"
+keycloak_redirect_url: "{{ keycloak_3trains_redirect_url | default('https://jbcs-0') }}"
 keycloak_client: 3trains
+keycloak_disable_trust_manager: True
