keycloak: refresh auth token before creating role mappings

--- a/roles/3trains_keycloak/tasks/main.yml
+++ b/roles/3trains_keycloak/tasks/main.yml
@@ -96,4 +96,4 @@
   loop: "{{ keycloak_users | flatten }}"
   loop_control:
     loop_var: user
-  when: "{{ 'client_roles' in user }}"
+  when: "'client_roles' in user"
