jbcs: refactor handler to work with Ansible 2.9

--- a/roles/3trains_jbcs/handlers/main.yml
+++ b/roles/3trains_jbcs/handlers/main.yml
@@ -4,13 +4,5 @@
     name: jbcs-httpd24-httpd.service
     state: restarted
 
-- name: 'expire mod_cluster cache and restart'
-  become: true
-  block:
-    - service:
-        name: jbcs-httpd24-httpd.service
-        state: stopped
-    - command: rm {{ httpd.home }}/httpd/cache/mod_cluster/
-    - service:
-        name: jbcs-httpd24-httpd.service
-        state: started
+- name: "expire mod_cluster cache and restart"
+  include_tasks: tasks/mod_cluster_cache_and_restart.yml
