--- a/playbooks/demo.yml
+++ b/playbooks/demo.yml
@@ -7,6 +7,9 @@
 # JBoss Core Services (Apache HTTPD)
 - import_playbook: jbcs.yml
 
+# PGSL Playbook
+- import_playbook: postgresql.yml
+
 # Datagrid Playbook
 - import_playbook: jdg.yml
 
