--- a/roles/3trains_jdg/defaults/main.yml
+++ b/roles/3trains_jdg/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
-jdg_rhn_id: '98151'
-supervisor_password: "itsme"
-create_keycloak_caches: True
-infinispan_users:
+jdg_admin_password: "itsme"
+keycloak_caches: True
+jdg_users:
   - { name: 'ggraziol', password: 'admin', roles: 'deployer' }
   - { name: 'rpelisse', password: 'admin', roles: 'observer' }
   - { name: 'kitchensink', password: 'kspasswordks', roles: 'application' }
