--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -5,9 +5,8 @@ collections:
   - name: middleware_automation.redhat_csp_download
     version: ">=1.2.1"
   - name: middleware_automation.infinispan
-    version: ">=0.0.4"
-  - name: git@github.com:ansible-middleware/keycloak
-    type: git
-    version: "ab35489"
+    version: ">=0.0.5"
+  - name: middleware_automation.keycloak
+    version: ">=0.0.1"
   - name: community.general
   - name: community.postgresql
