Rework wfly role to use wfly collection

--- a/playbooks/wildfly.yml
+++ b/playbooks/wildfly.yml
@@ -3,6 +3,7 @@
   hosts: wildfly
   collections:
     - middleware_automation.jcliff
+    - middleware_automation.wildfly
     - middleware_automation.redhat_csp_download
   roles:
     - redhat_csp_download
