--- a/roles/3trains_keycloak/meta/main.yml
+++ b/roles/3trains_keycloak/meta/main.yml
@@ -1,4 +1,5 @@
 collections:
   - middleware_automation.redhat_csp_download
   - middleware_automation.jcliff
+  - middleware_automation.wildlfy
   - middleware_automation.keycloak
