--- a/roles/3trains_wildfly/tasks/appserver.yml
+++ b/roles/3trains_wildfly/tasks/appserver.yml
@@ -15,11 +15,8 @@
     wildfly_port_range_offset: -1
     wildfly_instance_name: "{{ inventory_hostname }}"
     instance_id: "{{ item }}"
-
-- name: "Install Keycloak Extension on instance {{ instance_name }}"
-  include_tasks: keycloak/keycloak-extension-install.yml
-  when:
-    - not enable_rhsso
+    service_systemd_env_file: "/etc/eap-{{ item }}.conf"
+    service_systemd_conf_file: "/usr/lib/systemd/system/{{ inventory_hostname }}-{{ item }}.service"
 
 - name: "Install RHSSO Extension on instance {{ instance_name }}"
   include_tasks: keycloak/keycloak-extension-install.yml
