--- a/playbooks/preconds.yml
+++ b/playbooks/preconds.yml
@@ -15,6 +15,7 @@
           - ansible_python_version is version('3.6','>')
         quiet: true
         fail_msg: "This demo has been built for RHEL 8.4+ (found {{ansible_distribution}} {{ansible_distribution_version}}) using Ansible 2.9 ({{ansible_version.string}}) running on Python 3 ({{ansible_python_version}})"
+      when: ansible_facts['virtualization_type'] not in ['docker','oci','containerd','podman']
 
     - name: "Ensure target system {{ ansible_nodename }} is properly registered"
       become: yes
@@ -26,8 +27,7 @@
       when:
         - rhn_username is defined
         - rhn_password is defined
-        - ansible_facts['virtualization_type'] != "oci"
-
+        - ansible_facts['virtualization_type'] not in ['docker','oci','containerd','podman']
 
     - name: "Ensure that OS has the required packages installed"
       include_role:
