--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,8 +9,7 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: registry.access.redhat.com/ubi8/ubi-init:latest
-    pre_build_image: true
+    image: centos:8
     privileged: true
     command: "/usr/sbin/init"
     etc_hosts:
@@ -22,6 +21,8 @@ platforms:
     groups:
       - wildfly
       - keycloak
+      - jdg
+      - pgsql
     port_bindings:
       - 8080:8080
     published_ports:
@@ -35,7 +36,7 @@ provisioner:
       pipelining: false
   playbooks:
     prepare: prepare.yml
-    converge: ../../playbooks/demo.yml
+    converge: converge.yml
   env:
     CATALINA_HOME: "/opt/apache-tomcat-9.0.50"
     ANSIBLE_FORCE_COLOR: "true"
