Override wildfly install path

--- a/roles/3trains_keycloak/tasks/main.yml
+++ b/roles/3trains_keycloak/tasks/main.yml
@@ -9,6 +9,13 @@
     name: keycloak
     tasks_from: firewalld
 
+- name: Debug keycloak log
+  command: tail -n 250 /opt/keycloak/keycloak.log
+  register: keycloak_output
+
+- debug:
+    msg: "Keycloak logfile: {{ keycloak_output.stdout_lines }}"
+
 - include_tasks: demo_urls_redirects/main.yml
 
 - set_fact:
