--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -24,9 +24,14 @@ platforms:
       - jdg
       - pgsql
     port_bindings:
-      - 8080:8080
-    published_ports:
-      - 0.0.0.0:8080:8080/TCP
+      - "8080/tcp"
+      - "8443/tcp"
+      - "8009/tcp"
+      - "11222/tcp"
+      - "5432/tcp"
+      - "8280/tcp"
+      - "8643/tcp"
+      - "8209/tcp"
 provisioner:
   name: ansible
   config_options:
