--- a/roles/3trains_wildfly/tasks/main.yml
+++ b/roles/3trains_wildfly/tasks/main.yml
@@ -15,12 +15,16 @@
 - name: "Install Prerequisites"
   include_tasks: prereqs.yml
 
-- include_role:
+- debug:
+    msg: "Workdir: {{ workdir }} Wildfly home: {{ home_default }}"
+
+- name: "Install wildfly"
+  include_role:
     name: wildfly_install
   vars:
     wildfly_user: 'wildfly'
-    wildfly_install_workdir: '/opt/jboss-eap/'
-    wildfly_home: "{{ wildfly_install_workdir }}/jboss-eap-7.4/"
+    wildfly_install_workdir: "{{ workdir }}"
+    wildfly_home: "{{ home_default }}"
 
 - name: "Install Keycloak module"
   include_tasks: keycloak/keycloak-download.yml
