--- a/playbooks/wildfly-app-mgmt.yaml
+++ b/playbooks/wildfly-app-mgmt.yaml
@@ -8,8 +8,8 @@
   tasks:
     - name: Wildfly Role
       include_role:
-        name: 3trains_wildfly
+        name: flange_wildfly
         tasks_from: fine-tuned-wildfly.yml
       vars:
-        keycloak_3trains_url: "{{ 'http://' + (groups['keycloak'][0] if groups['keycloak']| length > 0 else 'localhost')  + ':8080' }}"
+        keycloak_flange_url: "{{ 'http://' + (groups['keycloak'][0] if groups['keycloak']| length > 0 else 'localhost')  + ':8080' }}"
       loop: "{{ range(1, 4)|list }}"
