--- a/playbooks/fastpackage.yml
+++ b/playbooks/fastpackage.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Fast package 
       include_role:
-        name: 3trains_fastpackages
+        name: flange_fastpackages
       vars:
         packages_list: 
           - zip
