--- a/playbooks/jbcs.yml
+++ b/playbooks/jbcs.yml
@@ -10,4 +10,4 @@
         override_jbcs_bind_address: "{{ ansible_nodename }}"
     - name: "JBoss Core Services"
       include_role:
-        name: 3trains_jbcs
+        name: flange_jbcs
