--- a/playbooks/undeploy_app.yml
+++ b/playbooks/undeploy_app.yml
@@ -8,7 +8,7 @@
 
     - name: Wildfly Role
       include_role:
-        name: 3trains_wildfly
+        name: flange_wildfly
         tasks_from: undeploy_apps.yml
       vars:
         app_name: "{{ deployment_name }}"
