--- a/roles/flange_jbcs/tasks/prereqs.yml
+++ b/roles/flange_jbcs/tasks/prereqs.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Ensures required packages are installed"
   include_role:
-    name: 3trains_fastpackages
+    name: flange_fastpackages
   vars:
     packages_list:
       - mailcap
