--- a/roles/flange_wildfly/tasks/prereqs.yml
+++ b/roles/flange_wildfly/tasks/prereqs.yml
@@ -8,7 +8,7 @@
 
 - name: "Ensures required packages are installed"
   include_role:
-    name: 3trains_fastpackages
+    name: flange_fastpackages
   vars:
     packages_list: "{{ required_packages }}"
 
