Force galaxy install of requirements

--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -10,3 +10,5 @@ collections:
     version: ">=0.1.6"
   - name: community.general
   - name: community.postgresql
+  - name: community.docker
+    version: ">=1.9.1"
