--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,10 +1,7 @@
 ---
 dependency:
-  name: galaxy
-  options:
-    ignore-certs: True
-    ignore-errors: True
-    requirements-file: requirements.yml
+  name: shell
+  command: ansible-galaxy collection install -r molecule/default/requirements.yml -p $HOME/.ansible/collections --force-with-deps
 driver:
   name: docker
 platforms:
