--- a/inventory/group_vars/keycloak.yml
+++ b/inventory/group_vars/keycloak.yml
@@ -1,6 +1,7 @@
 ---
 keycloak_ha_enabled: True
 keycloak_modcluster_url: jbcs-0
+keycloak_frontend_url: "https://{{keycloak_modcluster_url}}"
 admin_pass: "redhat1!"
 
 infinispan_url: jdg-1
