--- a/roles/flange_wildfly/defaults/main.yml
+++ b/roles/flange_wildfly/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
-wfly_version: '19.0.0.Final'
-wildfly_version: '19.0.0.Final'
+wildfly_version: '26.0.0.Final'
 eap_version: '7.4'
-wildfly_home_default: "{{ workdir }}/wildfly-{{ wfly_version }}/"
-eap_home_default: "{{ workdir }}/jboss-eap-{{ eap_version }}/"
+
 wildfly_install_workdir: "{{ wildfly_home_default if jboss_eap_rhn_id is not defined or jboss_eap_rhn_id == 'none' else eap_home_default }}"
 
+wildfly_home_default: "{{ workdir }}/wildfly-{{ wildfly_version }}/"
+eap_home_default: "{{ workdir }}/jboss-eap-{{ eap_version }}/"
 home_default: "{{ wildfly_home_default if jboss_eap_rhn_id is not defined or jboss_eap_rhn_id == 'none' else eap_home_default }}"
 
 sample_app_version: "{{ sample_app_version_to_deploy | default('0.0.1') }}"
@@ -25,12 +25,10 @@ apps:
     url: "{{ gdrive_url }}1w9ss5okctnjUvRAxhPEPyC7DmbUwmbhb"
 app_dir: /opt/apps/
 workdir: "{{ '/opt/wildfly/' if jboss_eap_rhn_id is not defined or jboss_eap_rhn_id == 'none' else '/opt/jboss-eap/' }}"
-wfly_zipfile: "wildfly-{{ wfly_version }}.zip"
-wfly_download_url: "https://download.jboss.org/wildfly/{{ wfly_version }}/{{ wfly_zipfile }}"
-keycloak_adapter_version: '9.0.3'
-keycloak_download_url12: "https://github.com/keycloak/keycloak/releases/download/{{ keycloak_adapter_version }}/keycloak-oidc-wildfly-adapter-{{ keycloak_adapter_version }}.zip"
-keycloak_download_url: "https://downloads.jboss.org/keycloak/{{ keycloak_adapter_version }}/adapters/keycloak-oidc/keycloak-wildfly-adapter-dist-{{ keycloak_adapter_version }}.tar.gz"
-rhsso_adapter_version: "15.0.2"
+
+keycloak_adapter_version: '15.0.2'
+keycloak_download_url: "https://github.com/keycloak/keycloak/releases/download/{{ keycloak_adapter_version }}/keycloak-oidc-wildfly-adapter-{{ keycloak_adapter_version }}.zip"
+
 java:
   home: "{{ override_widlfy_jvm | default('/usr/lib/jvm/java-1.8.0') }}"
 
@@ -58,7 +56,7 @@ postgres:
     password: wildfly
 
 # can't use a structure for the jdbc_driver because of the interpolation between variables.
-jdbc_driver_module_dir: "{{ wildfly.home }}//modules/org/postgresql/main"
+jdbc_driver_module_dir: "{{ wildfly.home }}/modules/org/postgresql/main"
 jdbc_driver_version: 9.2-1002-jdbc4
 jdbc_driver_jar_filename: "postgresql-{{ jdbc_driver_version }}.jar"
 jdbc_driver_jar_url: "https://repo.maven.apache.org/maven2/org/postgresql/postgresql/{{ jdbc_driver_version }}/{{ jdbc_driver_jar_filename }}"
