update addressbook download url and DS, pgsql version

--- a/roles/flange_postgresql/defaults/main.yml
+++ b/roles/flange_postgresql/defaults/main.yml
@@ -13,3 +13,6 @@ pgsql:
     - name: "keycloak"
       user: "keycloak-user"
       password: "keycloak-pass"
+    - name: wildfly
+      user: wildfly
+      password: wildfly
